# audio_aigented

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  README_DOCKER.md  debug_diarization.py  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  docker-test.sh  gen_ref_pages.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  run-transcription.sh  sitemap.xml  test_diarization_config.py  test_reduced_verbosity.py  test_simple_diarization.py  test_speaker_hint.py  test_two_speaker_audio.py
.github/workflows/: docs.yml
.roo/rules/: 01-GENERAL.md  02-PLANNING.md  03-TASK.md
.temp/: copy_pyconde_descriptions.py
config/: default.yaml  diarization_config.yaml  example_vocabulary.txt  python_vocabulary.txt
deployment/docker/: index.html
deployment/models/: index.html
deployment/performance/: index.html
development/contributing/: index.html
development/structure/: index.html
development/testing/: index.html
docs/: DOCKER.md  IMPLEMENTATION_PLAN.md  MODEL_MANAGEMENT.md  README.md  faq.md  index.md  quick-reference.md
docs/deployment/: docker.md  performance.md
docs/development/: contributing.md  structure.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: audio-processing.md  diarization.md  improving-accuracy.md  output-formats.md  overview.md  transcription.md
examples/: basic_usage.py  enhanced_transcription.py  using_context.py  using_raw_content.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/audio-processing/: index.html
guide/diarization/: index.html
guide/improving-accuracy/: index.html
guide/output-formats/: index.html
guide/overview/: index.html
guide/transcription/: index.html
reference/SUMMARY/: index.html
reference/audio_aigented/__init__/: index.html
reference/audio_aigented/audio/__init__/: index.html
reference/audio_aigented/audio/loader/: index.html
reference/audio_aigented/cache/__init__/: index.html
reference/audio_aigented/cache/manager/: index.html
reference/audio_aigented/config/__init__/: index.html
reference/audio_aigented/config/manager/: index.html
reference/audio_aigented/context/__init__/: index.html
reference/audio_aigented/context/content_analyzer/: index.html
reference/audio_aigented/context/file_context/: index.html
reference/audio_aigented/diarization/__init__/: index.html
reference/audio_aigented/diarization/config_builder/: index.html
reference/audio_aigented/diarization/diarizer/: index.html
reference/audio_aigented/diarization/rttm_parser/: index.html
reference/audio_aigented/formatting/__init__/: index.html
reference/audio_aigented/formatting/formatter/: index.html
reference/audio_aigented/pipeline/: index.html
scripts/: run-transcription.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/IMPLEMENTATION_PLAN/: index.html
site/deployment/docker/: index.html
site/deployment/performance/: index.html
site/development/testing/: index.html
site/getting-started/configuration/: index.html
site/guide/overview/: index.html
site/search/: search_index.json
src/audio_aigented/: __init__.py  pipeline.py
src/audio_aigented/audio/: __init__.py  loader.py
src/audio_aigented/config/: manager.py
src/audio_aigented/context/: __init__.py  content_analyzer.py  file_context.py
src/audio_aigented/diarization/: __init__.py  config_builder.py  diarizer.py  rttm_parser.py
src/audio_aigented/formatting/: __init__.py  formatter.py
src/audio_aigented/models/: __init__.py  schemas.py
src/audio_aigented/output/: __init__.py  writer.py
src/audio_aigented/transcription/: __init__.py  asr.py  enhanced_asr.py  vocabulary.py
src/audio_aigented/utils/: __init__.py  decorators.py  logging_config.py
stylesheets/: extra.css
test_diarization_debug/out_mono_How to build an AI-first organization/: transcript.json  transcript.txt  transcript_attributed.txt
test_diarization_output/out_mono_How to build an AI-first organization/: transcript.json  transcript.txt  transcript_attributed.txt
test_simple_output/out_mono_How to build an AI-first organization/: transcript.json  transcript.txt  transcript_attributed.txt
tests/: __init__.py  test_attributed_file_output.py  test_attributed_formatting.py  test_audio_loader.py  test_config.py  test_diarization.py  test_diarization_pipeline.py  test_models.py  test_pipeline_diarization.py
(+20 files in other folders)
